# oxy

./: Cargo.toml  LICENSE  README.md  protocol.txt  rustfmt.toml
man/: oxy-client.1  oxy-copy.1  oxy-guide.1  oxy-help.1  oxy-keygen.1  oxy-reverse-client.1  oxy-reverse-server.1  oxy-serve-one.1  oxy-server.1  oxy.1
src/: arg.rs  base32.rs  client.rs  conf.rs  config.rs  copy.rs  core.rs  entry.rs  exit.rs  guide.rs  guide.txt  inner.rs  keys.rs  lib.rs  log.rs  main.rs  message.rs  outer.rs  oxy.rs  oxyhelpers.rs  pty.rs  reexec.rs  server.rs  tuntap.rs  ui.rs  util.rs  wordlist.rs
src/core/: drop_privs.rs  handle_message.rs  kex.rs  metacommands.rs  mod.rs  restrict_message.rs  scoped_arg.rs  socks.rs
tests/: tests.rs
util/: LICENSE-oxy-gen  oxy-gen.sh
