[package]
name = "oxy"
version = "1.0.0-pre1"
authors = ["Jenna Magius <pyrosim@gmail.com>"]
license = "BSD-2-Clause"
description = "A security focused remote access tool."
documentation = "https://oxy-secure.app/doc/oxy/"
homepage = "https://oxy-secure.app"
repository = "https://github.com/oxy-secure/oxy"

[dependencies]
clap = "2.31"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
byteorder = "1.2"
log = "0.4"
env_logger = "0.5"
shlex = "0.1"
transportation = { version = "1.0.0", features = ["encrypt", "protocol"] }
lazy_static = "1.0"
num = "0.1"
rustyline = "1.0"
rmp = "0.8"
rmp-serde = "0.13"
nix = "0.11"
libc = "0.2.40"
data-encoding = "2.1.1"
textwrap = { version = "0.10", features = ["term_size"] }
parking_lot = { version = "0.5.5", features = ["nightly"] }

[target.'cfg(unix)'.dependencies]
termion = "1.5.1"
