[package]
name = "oxy"
version = "4.0.0-dev"
authors = ["Jenna Magius <pyrosim@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_cbor = "0.9.0"
toml = "0.4.8"
parking_lot = "0.6.4"
transportation = "5.0.0"
mio = "0.6.16"
rust-crypto = "0.2.36"
data-encoding = "2.1.1"
rand = "0.5.5"
snow = "0.4.0"
libsodium-sys = "0.1.0"
num = "0.2.0"
